--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "deepstream.io-client-js": "^2.3.0",
+    "fs": "0.0.1-security",
+    "net": "^1.0.2",
+    "tls": "0.0.1",
     "vue": "^2.4.2",
+    "vue-resource": "^1.5.0",
     "vuex": "^3.0.0"
   },
   "devDependencies": {
